Novos títulos e formatação

--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -28,7 +28,8 @@
                 </nav>
             </div>
             <div class="content" style="margin: 0px;">
-                <main id="content">
+                <main id="conhecimentos">
+                    <h3>Conhecimentos</h3><hr>
                     <ol type="a">
                         <li>
                             Inglês Avançado
