Resolvido quebra de linha nome

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Curriculo Digital</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
+    <body>
         <div class="parent">
             <header class="navbar">
                 <aside>
@@ -30,10 +31,11 @@
             </header>
             <div class="content" style="margin: 0px;">
                 <main id="content">
-                    <h1 id="profile-name">Felipe Bryan Campos de Moraes</h1>
-                    <p>Rua Anna Ortega Traballi, 430 casa 37 - São José dos Campos-SP <br>
-                        E-mail: <a href="mailto:felipe.bryan@live.com">felipe.bryan@live.com</a><br>                    
-                        Telefone: (12) 99737-9355
+                    <h1 id="profile-name">Felipe <span id="profile-name-2">Bryan Campos de Moraes</span></h1>
+                    <p>
+                        <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city">São José dos Campos-SP</span><br>
+                        <b>E-mail:</b> <a href="mailto:felipe.bryan@live.com">felipe.bryan@live.com</a><br>                    
+                        <b>Telefone:</b> (12) 99737-9355
                         <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
                             <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 20px; height: 20px;" title="Enviar whatsapp para Felipe">
                         </a>                
