--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         sincero e leal.
                         Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
                     </p><hr>
-                    <figure>
+                    <figure id="social-networks">
                         <a href="https://www.facebook.com/felipe.bryan" target="_blank">
                             <img src="/assets/facebook-icon.png" alt="facebook-icon" style="width: 50px; height: 50px;">
                         </a>
