--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -7,7 +7,7 @@
         <title>Curriculo Digital</title>
         <link rel="stylesheet" href="/css/style.css">
     </head>
-    <body id="index">
+    <body>
         <div class="parent">
             <div class="navbar">
                 <nav>
