--- a/objetivos.html
+++ b/objetivos.html
@@ -32,7 +32,7 @@
                     <h3>Objetivos</h3><hr>
                     <ul>
                         <li>
-                            Startar na carreira de desenvolvedor.
+                            Ingressar na carreira de desenvolvedor.
                         </li>
                         <li>
 
