--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <figure>
                             <img src="/assets/avatar.jpeg" alt="avatar" id="avatar1">
                         </figure>
-                        <div id="nav-items" style="margin: 0px;">
+                        <div id="nav-items" style="margin: 0px; color: white;">
                             <div>
                                 <b><p><a href="/index.html">SOBRE</a></p>
                             </div>
@@ -34,10 +34,9 @@
                     <h1 id="profile-name">Felipe <span id="profile-name-2">Bryan Campos de Moraes</span></h1>
                     <p>
                         <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city"><b>São José dos Campos-SP</b></span><br>
-                        <b>E-mail:</b> <a href="mailto:felipe.bryan@live.com">felipe.bryan@live.com</a><br>                    
                         <b>Telefone:</b> (12) 99737-9355
                         <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
-                            <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 20px; height: 20px;" title="Enviar whatsapp para Felipe">
+                            <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
                         </a>                
                     </p><hr>
                     <p>
@@ -46,8 +45,8 @@
                         Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
                     </p><hr>
                     <figure id="social-networks">
-                        <a href="https://www.facebook.com/felipe.bryan" target="_blank">
-                            <img src="/assets/facebook-icon.png" alt="facebook-icon" style="width: 50px; height: 50px;">
+                        <a href="mailto:felipe.bryan@live.com" target="_blank">
+                            <img src="/assets/outlook-icon.png" alt="Email" style="width: 50px; height: 50px;">
                         </a>
                         <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank">
                             <img src="/assets/linkedin-icon.png" alt="linkedin-icon" style="width: 50px; height: 50px;">
@@ -55,6 +54,9 @@
                         <a href="https://github.com/Felipe-Bryan" target="_blank">
                             <img src="/assets/github-icon.png" alt="github-icon" style="width: 50px; height: 50px;">
                         </a>
+                        <a href="https://www.facebook.com/felipe.bryan" target="_blank">
+                            <img src="/assets/facebook-icon.png" alt="facebook-icon" style="width: 50px; height: 50px;">
+                        </a>                        
                     </figure>                   
                 </main>
             </div>
