--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <a href="mailto:felipe.bryan@live.com" target="_blank">
                             <img src="/assets/outlook-icon.png" alt="Email" style="width: 50px; height: 50px;">
                         </a>
+                        <a href="mailto:fbryancm@gmail.com" target="_blank">
+                            <img src="/assets/gmail-icon.png" alt="Gmail" style="width: 50px; height: 50px;">
+                        </a>
                         <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank">
                             <img src="/assets/linkedin-icon.png" alt="linkedin-icon" style="width: 50px; height: 50px;">
                         </a>
