--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                         </figure>
                         <div id="nav-items" style="margin: 0px; color: white;">
                             <div>
-                                <b><p><a href="/index.html">SOBRE</a></p>
+                                <b><p class="button"><a href="/index.html">SOBRE</a></p>
                             </div>
                             <div>
-                                <p><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
+                                <p class="button"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
                             </div>
                             <div>
-                                <p><a href="/objetivos.html">OBJETIVOS</a></p></b>
+                                <p class="button"><a href="/objetivos.html">OBJETIVOS</a></p></b>
                             </div>
                         </div>
                     </nav>
