--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <main id="content">
                     <h1 id="profile-name">Felipe <span id="profile-name-2">Bryan Campos de Moraes</span></h1>
                     <p>
-                        <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city"><b>São José dos Campos-SP</b></span><br>
+                        <address>
+                            <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city"><b>São José dos Campos-SP</b></span><br>
+                        </address>                        
                         <b>Telefone:</b> (12) 99737-9355
                         <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
                             <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
