--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -19,7 +19,7 @@
                             <b><p class="button"><a href="/index.html">SOBRE</a></p>
                         </div>
                         <div>
-                            <p class="button"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
+                            <p class="active"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
                         </div>
                         <div>
                             <p class="button"><a href="/objetivos.html">OBJETIVOS</a></p></b>
