--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         </figure>
                         <div id="nav-items" style="margin: 0px; color: white;">
                             <div>
-                                <b><p class="button"><a href="/index.html">SOBRE</a></p>
+                                <b><p class="active"><a href="/index.html">SOBRE</a></p>
                             </div>
                             <div>
                                 <p class="button"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
