--- a/objetivos.html
+++ b/objetivos.html
@@ -22,7 +22,7 @@
                             <p class="button"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
                         </div>
                         <div>
-                            <p class="button"><a href="/objetivos.html">OBJETIVOS</a></p></b>
+                            <p class="active"><a href="/objetivos.html">OBJETIVOS</a></p></b>
                         </div>
                     </div>
                 </nav>
