Adicionado title aos icones

--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
                         Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
                     </p><hr>
                     <figure id="social-networks">
-                        <a href="mailto:felipe.bryan@live.com" target="_blank">
+                        <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
                             <img src="/assets/outlook-icon.png" alt="Email" style="width: 50px; height: 50px;">
                         </a>
-                        <a href="mailto:fbryancm@gmail.com" target="_blank">
+                        <a href="mailto:fbryancm@gmail.com" target="_blank" title="Enviar email para: fbryancm@gmail.com">
                             <img src="/assets/gmail-icon.png" alt="Gmail" style="width: 50px; height: 50px;">
                         </a>
-                        <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank">
+                        <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank" title="Perfil de Felipe Bryan no LinkedIn">
                             <img src="/assets/linkedin-icon.png" alt="linkedin-icon" style="width: 50px; height: 50px;">
                         </a>
                         <a href="https://github.com/Felipe-Bryan" target="_blank">
-                            <img src="/assets/github-icon.png" alt="github-icon" style="width: 50px; height: 50px;">
+                            <img src="/assets/github-icon.png" alt="github-icon" style="width: 50px; height: 50px;" title="Perfil de Felipe Bryan no GitHub">
                         </a>
                         <a href="https://www.facebook.com/felipe.bryan" target="_blank">
-                            <img src="/assets/facebook-icon.png" alt="facebook-icon" style="width: 50px; height: 50px;">
+                            <img src="/assets/facebook-icon.png" alt="facebook-icon" style="width: 50px; height: 50px;" title="Perfil de Felipe Bryan no Facebook">
                         </a>                        
                     </figure>                   
                 </main>
