Favicon adicionado, cefr adicionado

--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Curriculo Digital</title>
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="icon" type="image/x-icon" href="/assets/curriculum-vitae-icon.png">
     </head>
     <body>
         <div class="parent">
@@ -32,7 +33,8 @@
                     <h3>Conhecimentos</h3><hr>
                     <ol type="a">
                         <li>
-                            Inglês Avançado
+                            Inglês Avançado (Nível B2 - 
+                            <a href="https://www.britishcouncil.org.br/quadro-comum-europeu-de-referencia-para-linguas-cefr" style="color: blue;">CEFR</a>)
                         </li>
                         <li>
                             HTML
@@ -44,7 +46,7 @@
                             JavaScript
                         </li>
                         <li>
-                            Aplicativos para escritório
+                            Aplicativos para escritório (Excel, Word, Powerpoint)
                         </li>
                         <li>
                             Ferramentas de desenvolvimento Web
