--- a/objetivos.html
+++ b/objetivos.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Curriculo Digital</title>
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="icon" type="image/x-icon" href="/assets/curriculum-vitae-icon.png">
     </head>
     <body>
         <div class="parent">
