--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -17,13 +17,13 @@
                     </figure>
                     <div id="nav-items" style="margin: 0px;">
                         <div>
-                            <b><p class="button"><a href="/index.html">SOBRE</a></p>
+                            <b><p class="button"><a href="/index.html">Sobre</a></p>
                         </div>
                         <div>
-                            <p class="active"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
+                            <p class="active"><a href="/conhecimentos.html">Conhecimentos</a></p>
                         </div>
                         <div>
-                            <p class="button"><a href="/objetivos.html">OBJETIVOS</a></p></b>
+                            <p class="button"><a href="/objetivos.html">Objetivos</a></p></b>
                         </div>
                     </div>
                 </nav>
@@ -34,7 +34,10 @@
                     <ol type="a">
                         <li>
                             Inglês Avançado (Nível B2 - 
-                            <a href="https://www.britishcouncil.org.br/quadro-comum-europeu-de-referencia-para-linguas-cefr" style="color: blue;">CEFR</a>)
+                            <a href="https://www.britishcouncil.org.br/quadro-comum-europeu-de-referencia-para-linguas-cefr" 
+                                style="color: blue" target="_blank">
+                                CEFR
+                            </a>)
                         </li>
                         <li>
                             HTML
