--- a/objetivos.html
+++ b/objetivos.html
@@ -17,13 +17,13 @@
                     </figure>
                     <div id="nav-items" style="margin: 0px;">
                         <div>
-                            <b><p class="button"><a href="/index.html">SOBRE</a></p>
+                            <b><p class="button"><a href="/index.html">Sobre</a></p>
                         </div>
                         <div>
-                            <p class="button"><a href="/conhecimentos.html">CONHECIMENTOS</a></p>
+                            <p class="button"><a href="/conhecimentos.html">Conhecimentos</a></p>
                         </div>
                         <div>
-                            <p class="active"><a href="/objetivos.html">OBJETIVOS</a></p></b>
+                            <p class="active"><a href="/objetivos.html">Objetivos</a></p></b>
                         </div>
                     </div>
                 </nav>
