--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -29,7 +29,7 @@
                 </nav>
             </div>
             <div class="content" style="margin: 0px;">
-                <main id="conhecimentos">
+                <main class="conhecimentos">
                     <h3>Conhecimentos</h3><hr>
                     <ol type="a">
                         <li>
