--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
                         <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
                             <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
                         </a>                
-                    </p><br>
+                    </p><hr>
                     <p>
                         Tenho ênfase na qualidade, precisão, organização e competência. Cooperativo, 
                         sincero e leal.
                         Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
-                    </p>
-                    <figure id="social-networks">
+                    </p><br>
+                    <figure>
                         <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
-                            <img src="/assets/outlook-icon.png" alt="Email" style="width: 50px; height: 50px;">
+                            <img src="/assets/outlook-icon.png" alt="Email" class="social-icon">
                         </a>
                         <a href="mailto:fbryancm@gmail.com" target="_blank" title="Enviar email para: fbryancm@gmail.com">
-                            <img src="/assets/gmail-icon.png" alt="Gmail" style="width: 50px; height: 50px;">
+                            <img src="/assets/gmail-icon.png" alt="Gmail" class="social-icon">
                         </a>
                         <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank" title="Perfil de Felipe Bryan no LinkedIn">
-                            <img src="/assets/linkedin-icon.png" alt="linkedin-icon" style="width: 50px; height: 50px;">
+                            <img src="/assets/linkedin-icon.png" alt="linkedin-icon" class="social-icon">
                         </a>
                         <a href="https://github.com/Felipe-Bryan" target="_blank">
-                            <img src="/assets/github-icon.png" alt="github-icon" style="width: 50px; height: 50px;" title="Perfil de Felipe Bryan no GitHub">
+                            <img src="/assets/github-icon.png" alt="github-icon" class="social-icon" title="Perfil de Felipe Bryan no GitHub">
                         </a>
                         <a href="https://www.facebook.com/felipe.bryan" target="_blank">
-                            <img src="/assets/facebook-icon.png" alt="facebook-icon" style="width: 50px; height: 50px;" title="Perfil de Felipe Bryan no Facebook">
+                            <img src="/assets/facebook-icon.png" alt="facebook-icon" class="social-icon" title="Perfil de Felipe Bryan no Facebook">
                         </a>                        
                     </figure>                   
                 </main>
