--- a/objetivos.html
+++ b/objetivos.html
@@ -29,7 +29,7 @@
                 </nav>
             </div>
             <div class="content" style="margin: 0px;">
-                <main id="objetivos">
+                <main class="objetivos">
                     <h3>Objetivos</h3><hr>
                     <ul>
                         <li>
