--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -33,7 +33,7 @@
                     <h3>Conhecimentos</h3><hr>
                     <ol type="a">
                         <li>
-                            Inglês Avançado (Nível B2 - 
+                            Inglês - Nível B2 (
                             <a href="https://www.britishcouncil.org.br/quadro-comum-europeu-de-referencia-para-linguas-cefr" 
                                 style="color: blue" target="_blank">
                                 CEFR
@@ -51,10 +51,7 @@
                         <li>
                             Aplicativos para escritório (Excel, Word, Powerpoint)
                         </li>
-                        <li>
-                            Ferramentas de desenvolvimento Web
-                        </li>
-                    </ol>            
+                    </ol>
                 </main>
             </div>
         </div>        
