--- a/objetivos.html
+++ b/objetivos.html
@@ -33,10 +33,10 @@
                     <h3>Objetivos</h3><hr>
                     <ul>
                         <li>
-                            Ingressar na carreira de desenvolvedor.
+                            Construir uma carreira sólida na área da tecnologia.
                         </li>
                         <li>
-
+                            
                         </li>
                         <li>
                             
