--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
             </header>
             <div class="content" style="margin: 0px;">
                 <main id="content">
-                    <h1 id="profile-name">Felipe <span id="profile-name-2">Bryan Campos de Moraes</span></h1>
-                    <p>
-                        <address>
-                            <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city"><b>São José dos Campos-SP</b></span><br>
-                        </address>                        
-                        <b>Telefone:</b> (12) 99737-9355
-                        <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
-                            <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
-                        </a>                
-                    </p><hr>
-                    <p>
-                        Tenho ênfase na qualidade, precisão, organização e competência. Cooperativo, 
-                        sincero e leal.
-                        Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
-                    </p><br>
+                    <div class="index-content">
+                        <h1 id="profile-name">Felipe <span id="profile-name-2">Bryan Campos de Moraes</span></h1>
+                        <p>
+                            <address>
+                                <b>Endereço:</b> Rua Anna Ortega Traballi, 430 casa 37 - <span id="city"><b>São José dos Campos-SP</b></span><br>
+                            </address>                        
+                            <b>Telefone:</b> (12) 99737-9355
+                            <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
+                                <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
+                            </a>                
+                        </p><hr>
+                        <p>
+                            Tenho ênfase na qualidade, precisão, organização e competência. Cooperativo, 
+                            sincero e leal.
+                            Cauteloso e preocupado. Focado no que é “correto”. Precavido, preciso, reativo.
+                        </p><br>
+                    </div>                    
                     <figure>
                         <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
                             <img src="/assets/outlook-icon.png" alt="Email" class="social-icon">
