--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -10,11 +10,11 @@
     </head>
     <body>
         <div class="parent">
-            <div class="navbar">
+            <div class="navbar">                
                 <nav>
                     <figure>
                         <img src="/assets/avatar.jpeg" alt="avatar" id="avatar1">
-                    </figure>
+                    </figure>                  
                     <div id="nav-items" style="margin: 0px;">
                         <div>
                             <b><p class="button"><a href="/index.html">Sobre</a></p>
@@ -49,9 +49,19 @@
                             JavaScript
                         </li>
                         <li>
-                            Aplicativos para escritório (Excel, Word, Powerpoint)
+                            Aplicativos para escritório
+                            <ul>
+                                <li>Excel</li>
+                                <li>PowerPoint</li>
+                                <li>Word</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Ferramentas de desenvolvimento web
                         </li>
                     </ol>
+                    <iframe src="https://github-readme-stats.vercel.app/api/top-langs/?username=felipe-bryan&layout=compact=true&theme=tokyonight" frameborder="0" class="iframe">
+                    </iframe>
                 </main>
             </div>
         </div>        
