--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     </head>
     <body>
         <div class="parent">
-            <header class="navbar">                
+            <header class="navbar"> 
                 <nav>
                     <figure>
                         <img src="/assets/avatar.jpeg" alt="avatar" id="avatar1">
-                    </figure>                   
+                    </figure>                                     
                     <div id="nav-items" style="margin: 0px; color: white;">
                         <div>
                             <b><p class="active"><a href="/index.html">Sobre</a></p>
@@ -49,10 +49,10 @@
                     </div>                    
                     <figure>
                         <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
-                            <img src="/assets/outlook-icon.png" alt="Email" class="social-icon">
+                            <img src="/assets/outlook-icon.png" alt="outlook-icon" class="social-icon">
                         </a>
                         <a href="mailto:fbryancm@gmail.com" target="_blank" title="Enviar email para: fbryancm@gmail.com">
-                            <img src="/assets/gmail-icon.png" alt="Gmail" class="social-icon">
+                            <img src="/assets/gmail-icon.png" alt="gmail-icon" class="social-icon">
                         </a>
                         <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank" title="Perfil de Felipe Bryan no LinkedIn">
                             <img src="/assets/linkedin-icon.png" alt="linkedin-icon" class="social-icon">
