--- a/objetivos.html
+++ b/objetivos.html
@@ -37,7 +37,7 @@
           </li>
           <br />
           <li>
-            Poder proporcionar conforto e segurnça para minha família por meio
+            Poder proporcionar conforto e segurança para minha família por meio
             do meu trabalho, de forma honesta e digna
           </li>
         </ul>
