estrutura de pastas modificada

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <link
       rel="shortcut icon"
-      href="/assets/curriculum-vitae-icon.png"
+      href="/assets/images/curriculum-vitae-icon.png"
       type="image/x-icon"
     />
     <title>Curriculo Digital</title>
@@ -16,7 +16,7 @@
     <div class="parent">
       <div class="navbar">
         <figure>
-          <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+          <img src="assets/images/avatar.jpeg" alt="avatar" class="avatar" />
         </figure>
         <nav class="nav-menu">
           <p class="active"><a href="/index.html">Sobre</a></p>
@@ -36,7 +36,7 @@
                   </address>                        
                   <b>Telefone:</b> (12) 99737-9355
                   <a href="https://api.whatsapp.com/send/?phone=%2B5512997379355&text&type=phone_number&app_absent=0" target="_blank"> 
-                      <img src="/assets/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
+                      <img src="/assets/images/whatsapp-icon.png" alt="whatsapp" style="width: 16px; height: 16px;" title="Enviar whatsapp para Felipe">
                   </a>                
               </p><hr>
               <p>
@@ -47,19 +47,19 @@
           </div>                    
           <figure>
               <a href="mailto:felipe.bryan@live.com" target="_blank" title="Enviar email para: felipe.bryan@live.com">
-                  <img src="/assets/outlook-icon.png" alt="outlook-icon" class="social-icon">
+                  <img src="/assets/images/outlook-icon.png" alt="outlook-icon" class="social-icon">
               </a>
               <a href="mailto:fbryancm@gmail.com" target="_blank" title="Enviar email para: fbryancm@gmail.com">
-                  <img src="/assets/gmail-icon.png" alt="gmail-icon" class="social-icon">
+                  <img src="/assets/images/gmail-icon.png" alt="gmail-icon" class="social-icon">
               </a>
               <a href="https://www.linkedin.com/in/felipe-bryan-55b2a6139/" target="_blank" title="Perfil de Felipe Bryan no LinkedIn">
-                  <img src="/assets/linkedin-icon.png" alt="linkedin-icon" class="social-icon">
+                  <img src="/assets/images/linkedin-icon.png" alt="linkedin-icon" class="social-icon">
               </a>
               <a href="https://github.com/Felipe-Bryan" target="_blank">
-                  <img src="/assets/github-icon.png" alt="github-icon" class="social-icon" title="Perfil de Felipe Bryan no GitHub">
+                  <img src="/assets/images/github-icon.png" alt="github-icon" class="social-icon" title="Perfil de Felipe Bryan no GitHub">
               </a>
               <a href="https://www.facebook.com/felipe.bryan" target="_blank">
-                  <img src="/assets/facebook-icon.png" alt="facebook-icon" class="social-icon" title="Perfil de Felipe Bryan no Facebook">
+                  <img src="/assets/images/facebook-icon.png" alt="facebook-icon" class="social-icon" title="Perfil de Felipe Bryan no Facebook">
               </a>                        
           </figure>                   
         </main>
