--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link
-      rel="shortcut icon"
-      href="/assets/curriculum-vitae-icon.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="shortcut icon" href="/assets/curriculum-vitae-icon.png" type="image/x-icon" />
     <title>Curriculo Digital</title>
   </head>
   <body>
     <div class="parent">
       <div class="navbar">
         <figure>
-          <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+          <img src="assets/images/avatar.jpeg" alt="avatar" class="avatar" />
         </figure>
         <nav class="nav-menu">
           <p class="button"><a href="/index.html">Sobre</a></p>
