--- a/objetivos.html
+++ b/objetivos.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link
-      rel="shortcut icon"
-      href="/assets/curriculum-vitae-icon.png"
-      type="image/x-icon"
-    />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="shortcut icon" href="/assets/curriculum-vitae-icon.png" type="image/x-icon" />
     <title>Curriculo Digital</title>
   </head>
   <body>
     <div class="parent">
       <div class="navbar">
         <figure>
-          <img src="assets/avatar.jpeg" alt="avatar" class="avatar" />
+          <img src="assets/images/avatar.jpeg" alt="avatar" class="avatar" />
         </figure>
         <nav class="nav-menu">
           <p class="button"><a href="/index.html">Sobre</a></p>
@@ -30,16 +26,11 @@
         <h2>Objetivos</h2>
         <ul class="objective-list">
           <li>
-            Atuar na área da tecnologia e ampliar ainda mais os meus
-            conhecimentos, desenvolvimento profissional e de vida, sempre em
-            harmonia com a qualidade do meu trabalho e a preparação dos meus
-            dias para obter o sucesso esperado no ato da minha contratação.
+            Atuar na área da tecnologia e ampliar ainda mais os meus conhecimentos, desenvolvimento profissional e de vida, sempre em harmonia com a
+            qualidade do meu trabalho e a preparação dos meus dias para obter o sucesso esperado no ato da minha contratação.
           </li>
           <br />
-          <li>
-            Poder proporcionar conforto e segurança para minha família por meio
-            do meu trabalho, de forma honesta e digna
-          </li>
+          <li>Poder proporcionar conforto e segurança para minha família por meio do meu trabalho, de forma honesta e digna</li>
         </ul>
       </div>
     </div>
